@@ -1,11 +1,13 @@
 ucxtdir = $(datadir)/exult
 
 ucxt_DATA = opcodes.txt \
-	u7opcodes.data
+	u7opcodes.data	\
+	u7misc.data
 
 EXTRA_DIST = \
 	events.data	\
 	flags.data	\
 	opcodes.txt	\
-	u7opcodes.data
+	u7opcodes.data	\
+	u7misc.data
 
